architectcompvalidate.js - @bug window.addEvent('domready', function() {}); lo reemplacé por jQuery default.php - marca para agregar un botón exportar a excel created_by_alias - campo de tabla que quiero que sólo aparezca si INCLUDE_CREATED && INCLUDE_ALIAS generate.php, install.architectcomp_mysql.utf8.sql - Agregué comentarios al script para la base de datos. en-GB.com_architectcomp.ini, searchreplace.php - generate_admin_dashboard Agregué botones a cada vista JToolbarHelper::help()
@ToDo - dentro de la carpeta views ya no pasan los reemplazos, no se porqué. Lo necesito para terminar el dashboard
@ToDo - Generar el contenido de ayuda

--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/language/en-GB/en-GB.com_architectcomp.ini
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/language/en-GB/en-GB.com_architectcomp.ini
@@ -741,3 +741,6 @@ JHELP_COMPONENTS_[%%ARCHITECTCOMP%%]_CATEGORY_EDIT="Components_Content_Categorie
     [%%ENDIF GENERATE_CATEGORIES%%]
 
 [%%ENDFOR COMPONENT_OBJECT%%]
+
+; if generate_admin_dashboard
+[%%COM_ARCHITECTCOMP%%]_VIEW_DASHBOARD_HEADER="[%%ArchitectComp_name%%] Manager: Dashboard"
