Mejorar [%%IF INCLUDE_ALIAS%%] access.xml -> core.version.note language -> etiquetas core.version.note edit.php -> autorise core.version.note compobject.xml -> created read only

--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/language/en-GB/en-GB.com_architectcomp.ini
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/language/en-GB/en-GB.com_architectcomp.ini
@@ -241,6 +241,8 @@
 [%%IF INCLUDE_VERSIONS%%]
 [%%COM_ARCHITECTCOMP%%]_FIELDSET_VERSION_CONTROL_LABEL="Version Control Options"
 [%%COM_ARCHITECTCOMP%%]_FIELDSET_VERSION_CONTROL_DESC="Set which content require Version Control and the maximum number of past revisions stored."
+[%%COM_ARCHITECTCOMP%%]_ACTION_VERSION_NOTE="Edit Note"
+[%%COM_ARCHITECTCOMP%%]_ACTION_VERSION_NOTE_COMPONENT_DESC="Allows users in the group add notes for the Version Control."
 [%%ENDIF INCLUDE_VERSIONS%%]
 
 [%%IF INCLUDE_FEATURED%%]
