--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/site/language/es-ES/es-ES.com_architectcomp.ini
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/site/language/es-ES/es-ES.com_architectcomp.ini
@@ -26,19 +26,19 @@
 
 [%%COM_ARCHITECTCOMP%%]_CAPTCHA_LABEL="Captcha"
 [%%COM_ARCHITECTCOMP%%]_CAPTCHA_DESC="Type in the textbox what you see in the image."
-[%%COM_ARCHITECTCOMP%%]_DETAILS="Details"
+[%%COM_ARCHITECTCOMP%%]_DETAILS="Detalle"
 [%%COM_ARCHITECTCOMP%%]_EDIT_ITEM="Edit - %s"
 [%%COM_ARCHITECTCOMP%%]_ERROR_DATABASE_FATAL="A fatal database error has occurred with error messsage: %s"
 [%%COM_ARCHITECTCOMP%%]_ERROR_ON_FORM="Some values are invalid"
 [%%COM_ARCHITECTCOMP%%]_FILTER_SEARCH_DESC="Filter Search"
-[%%COM_ARCHITECTCOMP%%]_HEADING_ACTIONS="Actions"
+[%%COM_ARCHITECTCOMP%%]_HEADING_ACTIONS="Acciones"
 [%%COM_ARCHITECTCOMP%%]_HELP="Help"
 [%%COM_ARCHITECTCOMP%%]_PAGEBREAK_DOC_TITLE="Pagebreak"
 [%%COM_ARCHITECTCOMP%%]_PAGEBREAK_INSERT_BUTTON="Insert Page Break"
 [%%COM_ARCHITECTCOMP%%]_PAGEBREAK_PAGE_NUM="Page %s"
 [%%COM_ARCHITECTCOMP%%]_PAGEBREAK_TITLE="Page Title:"
 [%%COM_ARCHITECTCOMP%%]_PAGEBREAK_TOC="Table of Contents Alias:"
-[%%COM_ARCHITECTCOMP%%]_FIELDSET_PUBLISHING_LABEL="Publishing"
+[%%COM_ARCHITECTCOMP%%]_FIELDSET_PUBLISHING_LABEL="Publicación"
 [%%COM_ARCHITECTCOMP%%]_READMORE_NAME="Read more: "
 [%%COM_ARCHITECTCOMP%%]_READ_MORE="Read more..."
 [%%COM_ARCHITECTCOMP%%]_REGISTER_TO_READMORE_NAME="Login to read more: "
@@ -47,9 +47,9 @@
 [%%COM_ARCHITECTCOMP%%]_WARNING_NOSCRIPT="WARNING!  Use of javascript must be enabled if you wish to use all the functionality of this website.  Please amend your browser settings."
 
 [%%IF INCLUDE_NAME%%]
-[%%COM_ARCHITECTCOMP%%]_FIELD_NAME_LABEL="Name"
-[%%COM_ARCHITECTCOMP%%]_FIELD_VALUE_NAME="Name"
-[%%COM_ARCHITECTCOMP%%]_HEADING_NAME="Name"
+[%%COM_ARCHITECTCOMP%%]_FIELD_NAME_LABEL="Nombre"
+[%%COM_ARCHITECTCOMP%%]_FIELD_VALUE_NAME="Nombre"
+[%%COM_ARCHITECTCOMP%%]_HEADING_NAME="Nombre"
 [%%COM_ARCHITECTCOMP%%]_LINKED_NAMES_LABEL="Linked Names"
 [%%COM_ARCHITECTCOMP%%]_NAME_FILTER_LABEL="Name Filter"
     [%%IF INCLUDE_ALIAS%%]
@@ -108,26 +108,26 @@
 
 [%%IF INCLUDE_CREATED%%]
 [%%COM_ARCHITECTCOMP%%]_CREATED_DATE_ON="Created on %s"
-[%%COM_ARCHITECTCOMP%%]_FIELD_CREATED_LABEL="Created Date"
-[%%COM_ARCHITECTCOMP%%]_FIELD_VALUE_CREATED="Created Date"
-[%%COM_ARCHITECTCOMP%%]_HEADING_CREATED="Created Date"
+[%%COM_ARCHITECTCOMP%%]_FIELD_CREATED_LABEL="Creado"
+[%%COM_ARCHITECTCOMP%%]_FIELD_VALUE_CREATED="Creado"
+[%%COM_ARCHITECTCOMP%%]_HEADING_CREATED="Creado"
 [%%COM_ARCHITECTCOMP%%]_CREATED_BY="Created by %s"
-[%%COM_ARCHITECTCOMP%%]_FIELD_CREATED_BY_LABEL="Created By"
+[%%COM_ARCHITECTCOMP%%]_FIELD_CREATED_BY_LABEL="Creado por"
 [%%IF INCLUDE_ALIAS%%]
 [%%COM_ARCHITECTCOMP%%]_FIELD_CREATED_BY_ALIAS_LABEL="Created By Alias"
 [%%ENDIF INCLUDE_ALIAS%%]
-[%%COM_ARCHITECTCOMP%%]_FIELD_VALUE_CREATED_BY="Created By"
-[%%COM_ARCHITECTCOMP%%]_HEADING_CREATED_BY="Created By"
+[%%COM_ARCHITECTCOMP%%]_FIELD_VALUE_CREATED_BY="Creado por"
+[%%COM_ARCHITECTCOMP%%]_HEADING_CREATED_BY="Creado por"
 [%%COM_ARCHITECTCOMP%%]_LINK_CREATED_BY_LABEL="Link Created By"
 [%%COM_ARCHITECTCOMP%%]_LIST_CREATED_BY_LABEL="Show Created By in List"
 [%%COM_ARCHITECTCOMP%%]_SELECT_CREATED_BY="- Select Created By -"
 [%%ENDIF INCLUDE_CREATED%%]
 
 [%%IF INCLUDE_MODIFIED%%]
-[%%COM_ARCHITECTCOMP%%]_FIELD_MODIFIED_LABEL="Modified Date"
-[%%COM_ARCHITECTCOMP%%]_HEADING_MODIFIED="Modified Date"
-[%%COM_ARCHITECTCOMP%%]_FIELD_MODIFIED_BY_LABEL="Modified By"
-[%%COM_ARCHITECTCOMP%%]_HEADING_MODIFIED_BY="Modified By"
+[%%COM_ARCHITECTCOMP%%]_FIELD_MODIFIED_LABEL="Modificado"
+[%%COM_ARCHITECTCOMP%%]_HEADING_MODIFIED="Modificado"
+[%%COM_ARCHITECTCOMP%%]_FIELD_MODIFIED_BY_LABEL="Modificado por"
+[%%COM_ARCHITECTCOMP%%]_HEADING_MODIFIED_BY="Modificado por"
 [%%COM_ARCHITECTCOMP%%]_LAST_UPDATED="Last Updated on %s"
 [%%ENDIF INCLUDE_MODIFIED%%]
 
@@ -188,7 +188,7 @@
 
 [%%IF GENERATE_CATEGORIES%%]
 [%%COM_ARCHITECTCOMP%%]_CATEGORY="Category: %s"
-[%%COM_ARCHITECTCOMP%%]_CATEGORY_HEADER="Category Details"
+[%%COM_ARCHITECTCOMP%%]_CATEGORY_HEADER="Detalles de la Categoría"
 [%%COM_ARCHITECTCOMP%%]_CATEGORY_SELECT="- Select Category -"
 [%%COM_ARCHITECTCOMP%%]_CATEGORIES_FEED_SUMMARY_LABEL="For each feed item show" 
 [%%COM_ARCHITECTCOMP%%]_CATEGORIES_FEED_SUMMARY_DESC="If set to Intro Text, only the Intro Text will show in the newsfeed. If set to Full Text, the whole text will show in the newsfeed."
@@ -210,9 +210,9 @@
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_SELECT_BUTTON_DESC="Select or change the [%%CompObject_name%%]"
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_EDIT_DESC="Edit the [%%CompObject_name%%]"
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]="[%%CompObject_plural_name%%]"
-[%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_BASIC_DETAILS="[%%CompObject_name%%] Basic Details"
+[%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_BASIC_DETAILS="Detalles básicos [%%CompObject_name%%]"
 
-[%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_CREATE_ITEM="Create new [%%CompObject_name%%]"
+[%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_CREATE_ITEM="Nuevo [%%CompObject_short_name%%]"
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_EDIT_ITEM="Edit [%%CompObject_name%%]"
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_DELETE_ITEM="Delete [%%CompObject_name%%]"
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_DELETE_ITEM_CONFIRM="Are you sure you want to delete this [%%compobject_name%%]?"
@@ -223,7 +223,7 @@
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_ERROR_ITEM_NOT_FOUND="[%%Compobject_name%%] not found"
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_ERROR_LOGIN_TO_VIEW_ITEM="Please login to view the [%%compobject_short_name%%]"
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_FIELDS="[%%CompObject_name%%] fields"
-[%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_FIELDSET_DETAILS_LABEL="[%%CompObject_name%%] Details"
+[%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_FIELDSET_DETAILS_LABEL="Detalle <!--[%%CompObject_name%%]-->"
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_FIELDSET_LAYOUT="[%%CompObject_name%%] Display Options"
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_FIELDSET_FILTERS="[%%CompObject_plural_name%%] Filter Options"
 [%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_FIELDSET_RULES="[%%CompObject_name%%] Permissions"
@@ -271,7 +271,7 @@
     [%%ENDIF INCLUDE_NAME%%]
 
     [%%IF INCLUDE_ORDERING%%]
-[%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_ORDERING="Ordering:<br />New [%%compobject_short_plural_name%%] default to the first position. The ordering can be changed in back-end."
+[%%COM_ARCHITECTCOMP%%]_[%%COMPOBJECTPLURAL%%]_ORDERING="Ordenamiento:<br />Los nuevos [%%compobject_short_plural_name%%] por defecto aparcen en la primera posición. El orden puede ser modificado en el back-end."
     [%%ENDIF INCLUDE_ORDERING%%]
     
     [%%IF INCLUDE_PARAMS_GLOBAL%%]  
