No resultó viable sostener el cambio del prefijo #_ [%%compobjectprefix%%] Lo regresé a su estado anterior

--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/help/en-GB/j3x/com_architectcomp_admin.lyx
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/help/en-GB/j3x/com_architectcomp_admin.lyx
@@ -639,7 +639,7 @@ Modelo de datos (tablas)
 \end_layout
 
 \begin_layout Subsection
-[%%compobjectprefix%%][%%architectcomp%%]_[%%compobjectplural%%]
+#__[%%architectcomp%%]_[%%compobjectplural%%]
 \end_layout
 
 \begin_layout Subparagraph
