--- a/components_asset/lyx/MakeReadme.lyx
+++ b/components_asset/lyx/MakeReadme.lyx
@@ -554,45 +554,14 @@ LatexCommand tableofcontents
 \end_layout
 
 \begin_layout Standard
-\begin_inset CommandInset include
-LatexCommand include
-filename "D:/projects/my_joomla/com_componentarchitect/components_asset/TSJCDMX/observaciones_salas.lyx"
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
 \begin_inset Note Note
 status open
 
-\begin_layout Plain Layout
-\begin_inset CommandInset include
-LatexCommand include
-filename "D:/www/Google Drive caballeroantonio/Proyecto libros/Torti Manuales/scripts para manual/T20170807_documentALL/reglas20170822.lyx"
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Note Note
-status open
-
-\begin_layout LyX-Code
+\begin_layout Section
 Para cada componente
 \end_layout
 
 \begin_layout Plain Layout
-@ToDo generar config_lyx.tex manualmente usando config_lyx.php y agregando
- las tareas ACL que se hubieran generado específicamente
 \begin_inset CommandInset include
 LatexCommand include
 filename "D:/projects/my_joomla/com_componentarchitect/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/help/en-GB/j3x/com_architectcomp_admin.lyx"
@@ -602,17 +571,8 @@ filename "D:/projects/my_joomla/com_componentarchitect/admin/codetemplates/j_3_4
 
 \end_layout
 
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Note Note
-status open
-
-\begin_layout LyX-Code
-Catálogo General
+\begin_layout Subsection
+Para el componente Catálogo General
 \end_layout
 
 \begin_layout LyX-Code
@@ -636,7 +596,54 @@ sed -i 's/#__tsjcgeneral_generals/jtc_general/' $(find -type f -not -name
 \begin_inset Caption Standard
 
 \begin_layout Plain Layout
+Cambio de nombre de tablas
+\end_layout
 
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset CommandInset include
+LatexCommand include
+filename "D:/www/htdocs/JPruebas/tmp/com_t396_j34standard/admin/help/en-GB/j3x/com_t396_admin.lyx"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Para el componente Catálogo de materias
+\end_layout
+
+\begin_layout LyX-Code
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+#!/bin/bash
+\end_layout
+
+\begin_layout Plain Layout
+
+sed -i 's/#__tsjcmaterias_jtcmateria/jtc_materia/' $(find -type f -not -name
+ "*.png" | grep -v .git)
+\end_layout
+
+\begin_layout Plain Layout
+
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
 Cambio de nombre de tablas
 \end_layout
 
@@ -669,39 +676,10 @@ filename "D:/www/htdocs/JPruebas/tmp/com_t396_j34standard/admin/help/en-GB/j3x/c
 \begin_inset Note Note
 status open
 
-\begin_layout LyX-Code
-Catálogo de materias
-\end_layout
-
-\begin_layout LyX-Code
-\begin_inset listings
-inline false
-status open
-
 \begin_layout Plain Layout
-
-#!/bin/bash
-\end_layout
-
-\begin_layout Plain Layout
-
-sed -i 's/#__tsjcmaterias_jtcmateria/jtc_materia/' $(find -type f -not -name
- "*.png" | grep -v .git)
-\end_layout
-
-\begin_layout Plain Layout
-
-\begin_inset Caption Standard
-
-\begin_layout Plain Layout
-
-Cambio de nombre de tablas
-\end_layout
-
-\end_inset
-
-
-\end_layout
+\begin_inset CommandInset include
+LatexCommand include
+filename "D:/projects/my_joomla/com_componentarchitect/components_asset/TSJCDMX/observaciones_salas.lyx"
 
 \end_inset
 
@@ -711,7 +689,7 @@ Cambio de nombre de tablas
 \begin_layout Plain Layout
 \begin_inset CommandInset include
 LatexCommand include
-filename "D:/www/htdocs/JPruebas/tmp/com_t396_j34standard/admin/help/en-GB/j3x/com_t396_admin.lyx"
+filename "D:/www/Google Drive caballeroantonio/Proyecto libros/Torti Manuales/scripts para manual/T20170807_documentALL/reglas20170822.lyx"
 
 \end_inset
 
